home section done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,34 @@
     <script src="app.js" defer></script>
   </head>
   <body class="main-content">
-    <header class="section sec1 header active" id="home"></header>
+    <header class="container header active" id="home">
+      <div class="header-content">
+        <div class="left-header">
+          <div class="h-shape"></div>
+          <div class="image">
+            <img src="img/profile.png" alt="profilo" />
+          </div>
+        </div>
+        <div class="right-header">
+          <h1 class="name">
+            Ciao, sono <span>Thomas Basadonne.</span>
+            un Web Developer.
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+            ratione nobis nisi natus qui quae ducimus illo. Voluptatum, pariatur
+            blanditiis?Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          </p>
+          <div class="btn-container">
+            <a href="" class="main-btn">
+              <span class="btn-text">Scarica il CV</span>
+              <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
     <main>
       <section class="section sec2 about" id="about"></section>
       <section class="section sec3 portfolio" id="portfolio"></section>
