about me done  + portfolio init

--- a/index.html
+++ b/index.html
@@ -59,8 +59,222 @@
     </header>
 
     <main>
-      <section class="section sec2 about" id="about"></section>
-      <section class="section sec3 portfolio" id="portfolio"></section>
+      <section class="section sec2 about" id="about">
+        <div class="main-title">
+          <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+        </div>
+        <div class="about-container">
+          <div class="left-about">
+            <h4>Information about me</h4>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+              eligendi quisquam omnis eos tempora obcaecati consequatur qui
+              voluptas incidunt sequi corporis eius, nisi eum cumque minus
+              dolorem doloribus, ut culpa.
+            </p>
+            <div class="btn-container">
+              <a href="" class="main-btn">
+                <span class="btn-text">Scarica il CV</span>
+                <span class="btn-icon"
+                  ><i class="fa-solid fa-download"></i
+                ></span>
+              </a>
+            </div>
+          </div>
+          <div class="right-about">
+            <div class="about-item">
+              <div class="about-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">
+                  Projects <br />
+                  Completed
+                </p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="about-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">
+                  Projects <br />
+                  Completed
+                </p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="about-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">
+                  Projects <br />
+                  Completed
+                </p>
+              </div>
+            </div>
+            <div class="about-item">
+              <div class="about-text">
+                <p class="large-text">560+</p>
+                <p class="small-text">
+                  Projects <br />
+                  Completed
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="about-stats">
+          <h4 class="stat-title">My skills</h4>
+          <div class="progress-bars">
+            <div class="progress-bar">
+              <p class="progress-title">HTML5</p>
+              <div class="progress-con">
+                <p class="prog-text">90%</p>
+                <div class="progress">
+                  <span class="html"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="prog-title">css3</p>
+              <div class="progress-con">
+                <p class="prog-text">95%</p>
+                <div class="progress">
+                  <span class="css"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="prog-title">javascript</p>
+              <div class="progress-con">
+                <p class="prog-text">75%</p>
+                <div class="progress">
+                  <span class="js"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="prog-title">ReactJS</p>
+              <div class="progress-con">
+                <p class="prog-text">75%</p>
+                <div class="progress">
+                  <span class="react"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="prog-title">NodeJS</p>
+              <div class="progress-con">
+                <p class="prog-text">87%</p>
+                <div class="progress">
+                  <span class="node"></span>
+                </div>
+              </div>
+            </div>
+            <div class="progress-bar">
+              <p class="prog-title">Python</p>
+              <div class="progress-con">
+                <p class="prog-text">70%</p>
+                <div class="progress">
+                  <span class="python"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <h4 class="stat-title">My Timeline</h4>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fa-solid fa-briefcase"></i>
+            </div>
+            <p class="tl-duration">2010 presente</p>
+            <h5>Web Developer<span> - Vircrosoft</span></h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Exercitationem vitae voluptatem deserunt ex fugiat quibusdam
+              perspiciatis aut aspernatur recusandae itaque!
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fa-solid fa-briefcase"></i>
+            </div>
+            <p class="tl-duration">2010 presente</p>
+            <h5>Web Developer<span> - Vircrosoft</span></h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Exercitationem vitae voluptatem deserunt ex fugiat quibusdam
+              perspiciatis aut aspernatur recusandae itaque!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section sec3 portfolio" id="portfolio">
+        <div class="main-title">
+          <h2>My <span>Porfolio</span><span class="bg-text">My Works</span></h2>
+        </div>
+        <p class="port-text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque,
+          tempora!
+        </p>
+        <div class="portfolios">
+          <div class="portfolio-item">
+            <div class="img">
+              <img src="img/icons/bootstrap.png" alt="" />
+            </div>
+            <div class="hover-items">
+              <h3>Project Source</h3>
+              <div class="icons">
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <div class="img">
+              <img src="img/icons/bootstrap.png" alt="" />
+            </div>
+            <div class="hover-items">
+              <h3>Project Source</h3>
+              <div class="icons">
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <div class="img">
+              <img src="img/icons/bootstrap.png" alt="" />
+            </div>
+            <div class="hover-items">
+              <h3>Project Source</h3>
+              <div class="icons">
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+                <a class="icon" href="#" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="section sec4 blogs" id="blogs"></section>
       <section class="section sec5 contacts" id="contact"></section>
     </main>
