--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
 
@@ -57,9 +57,8 @@
         </div>
       </div>
     </header>
-
     <main>
-      <section class="section sec2 about" id="about">
+      <section class="section sec2" id="about">
         <div class="main-title">
           <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
         </div>
@@ -207,7 +206,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec3 portfolio" id="portfolio">
+      <section class="section sec3" id="portfolio">
         <div class="main-title">
           <h2>My <span>Porfolio</span><span class="bg-text">My Works</span></h2>
         </div>
@@ -275,7 +274,26 @@
           </div>
         </div>
       </section>
-      <section class="section sec4 blogs" id="blogs"></section>
+      <section class="section sec4" id="blogs">
+        <div class="blogs-content">
+          <div class="main-title">
+            <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+          </div>
+          <div class="blogs">
+            <div class="blog">
+              <img src="img/Icons/css.png" alt="" />
+              <div class="blog-text">
+                <h4>come creare un sito</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Repellendus quos atque eius perspiciatis voluptatum enim
+                  ratione voluptatibus deserunt repellat temporibus.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="section sec5 contacts" id="contact"></section>
     </main>
 
