--- a/index.html
+++ b/index.html
@@ -294,7 +294,99 @@
           </div>
         </div>
       </section>
-      <section class="section sec5 contacts" id="contact"></section>
+      <section class="section sec5 contacts" id="contact">
+        <div class="contact-container">
+          <div class="main-title">
+            <h2>
+              Contact <span>Me</span><span class="bg-text">Contatti</span>
+            </h2>
+          </div>
+          <div class="contact-content-con">
+            <div class="left-contact">
+              <h4>Contattami qui</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                libero ut sapiente impedit error voluptates voluptas similique
+                suscipit. Harum, illum.
+              </p>
+              <div class="contact-info">
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    Location
+                  </div>
+                  <p>: Ancona, Italia</p>
+                </div>
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    E-mail
+                  </div>
+                  <p>: Ancona, Italia</p>
+                </div>
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    Numero di telefono
+                  </div>
+                  <p>: Ancona, Italia</p>
+                </div>
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    Linkedin
+                  </div>
+                  <p>: Ancona, Italia</p>
+                </div>
+              </div>
+              <div class="contact-icons">
+                <div class="contact-icon">
+                  <a href="www.facebook.com" target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="right-contact">
+              <form action="" class="contact-form">
+                <div class="input-control i-control-2">
+                  <input type="text" required placeholder="Your Name" />
+                  <input type="email" required placeholder="Your email" />
+                </div>
+                <div class="input-control">
+                  <input type="text" required placeholder="Enter subject" />
+                </div>
+                <div class="input-control">
+                  <textarea
+                    name=""
+                    id=""
+                    cols="15"
+                    rows="8"
+                    placeholder="Message me"
+                  ></textarea>
+                </div>
+                <div class="submit-btn">
+                  <a href="" class="main-btn">
+                    <span class="btn-text">Scarica il CV</span>
+                    <span class="btn-icon"
+                      ><i class="fa-solid fa-download"></i
+                    ></span>
+                  </a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <div class="controls">
