fix errori + edit style

--- a/index.html
+++ b/index.html
@@ -207,6 +207,17 @@
             <div class="tl-icon">
               <i class="fas fa-briefcase"></i>
             </div>
+            <p class="tl-duration">2010 - present</p>
+            <h5>Web Developer<span> - Vircrosoft</span></h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              quasi vero fugit.
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
             <p class="tl-duration">2008 - 2011</p>
             <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
             <p>
@@ -247,11 +258,21 @@
               quasi vero fugit.
             </p>
           </div>
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="tl-duration">2017 - present</p>
+            <h5>3d Animation<span> - Brighton University</span></h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+              quasi vero fugit.
+            </p>
+          </div>
         </div>
       </section>
-      <section class="container" id="portfolio">
+      <!-- <section class="container" id="portfolio">
         <div class="main-title">
-          <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
         </div>
         <p class="port-text">
           Ecco alcuni dei miei lavori che ho realizzato in vari linguaggi di
@@ -260,7 +281,7 @@
         <div class="portfolios">
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port1.jpg" alt="" />
+              <img src="img/profile.png" alt="" />
             </div>
             <div class="hover-items">
               <h3>Project Source</h3>
@@ -279,7 +300,7 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port2.jpg" alt="" />
+              <img src="img/profile.png" alt="" />
             </div>
             <div class="hover-items">
               <h3>Project Source</h3>
@@ -298,83 +319,7 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port3.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port4.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port5.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port2.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port7.jpg" alt="" />
+              <img src="img/profile.png" alt="" />
             </div>
             <div class="hover-items">
               <h3>Project Source</h3>
@@ -392,23 +337,19 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="container" id="blogs">
         <div class="blogs-content">
           <div class="main-title">
-            <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+            <h2>
+              My <span>Portfolio</span><span class="bg-text">My Work</span>
+            </h2>
           </div>
+          <p class="port-text">
+            Ecco alcuni dei miei lavori che ho realizzato in vari linguaggi di
+            programmazione.
+          </p>
           <div class="blogs">
-            <div class="blog">
-              <img src="img/port6.jpg" alt="" />
-              <div class="blog-text">
-                <h4>How to Create Your Own Website</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
-              </div>
-            </div>
             <div class="blog">
               <img src="img/blog1.jpg" alt="" />
               <div class="blog-text">
@@ -417,6 +358,17 @@
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
+                <div class="icons">
+                  <a href="#" class="icon">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
               </div>
             </div>
             <div class="blog">
@@ -427,6 +379,38 @@
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
+                <div class="icons">
+                  <a href="#" class="icon">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="img/blog2.jpg" alt="" />
+              <div class="blog-text">
+                <h4>Become a Web Designer in 10 Days</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+                <div class="icons">
+                  <a href="#" class="icon">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
               </div>
             </div>
             <div class="blog">
@@ -437,6 +421,17 @@
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
+                <div class="icons">
+                  <a href="#" class="icon">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
               </div>
             </div>
             <div class="blog">
@@ -447,6 +442,17 @@
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
+                <div class="icons">
+                  <a href="#" class="icon">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
               </div>
             </div>
             <div class="blog">
@@ -480,36 +486,26 @@
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fas fa-map-marker-alt"></i>
-                    <span>Location</span>
                   </div>
                   <p>: Ancona, Italia</p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fas fa-envelope"></i>
-                    <span>Email</span>
                   </div>
-                  <p>
-                    <span>: thomasbasadonne@gmail.com</span>
-                  </p>
+                  <p>: thomasbasadonne@gmail.com</p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fas fa-user-graduate"></i>
-                    <span>Cellulare</span>
                   </div>
-                  <p>
-                    <span>: +39 3927726384</span>
-                  </p>
+                  <p>: +39 3927726384</p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fas fa-globe-africa"></i>
-                    <span>Lingue</span>
                   </div>
-                  <p>
-                    <span>: Italiano, Inglese</span>
-                  </p>
+                  <p>: Italiano, Inglese</p>
                 </div>
               </div>
               <div class="contact-icons">
@@ -569,11 +565,10 @@
       <div class="control" data-id="about">
         <i class="fas fa-user"></i>
       </div>
-      <div class="control" data-id="portfolio">
-        <i class="fas fa-briefcase"></i>
-      </div>
+      <!-- <div class="control" data-id="portfolio">
+      </div> -->
       <div class="control" data-id="blogs">
-        <i class="far fa-newspaper"></i>
+        <i class="fas fa-briefcase"></i>
       </div>
       <div class="control" data-id="contact">
         <i class="fas fa-envelope-open"></i>
