--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             professionalmente.
           </p>
           <div class="btn-con">
-            <a href="" class="main-btn">
+            <a
+              href="https://drive.google.com/file/d/1f-QDO4BpaSAwE2Sy9Ph6ZH2ook7GlZlR/view?usp=sharing"
+              class="main-btn"
+              target="_blank"
+            >
               <span class="btn-text">Scarica il CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -70,7 +74,11 @@
               necessitatibus deleniti eum soluta.
             </p>
             <div class="btn-con">
-              <a href="#" class="main-btn">
+              <a
+                href="https://drive.google.com/file/d/1f-QDO4BpaSAwE2Sy9Ph6ZH2ook7GlZlR/view?usp=sharing"
+                class="main-btn"
+                target="_blank"
+              >
                 <span class="btn-text">Scarica il CV</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
@@ -505,18 +513,24 @@
                   <div class="icon">
                     <i class="fas fa-globe-africa"></i>
                   </div>
-                  <p>: Italiano, Inglese</p>
+                  <p>: Italiano, Inglese[C1]</p>
                 </div>
               </div>
               <div class="contact-icons">
                 <div class="contact-icon">
-                  <a href="www.facebook.com" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
+                  <a
+                    href="https://www.linkedin.com/in/thomasbasadonne/"
+                    target="_blank"
+                  >
+                    <i class="fab fa-linkedin"></i>
                   </a>
-                  <a href="#" target="_blank">
-                    <i class="fab fa-twitter"></i>
+                  <a
+                    href="https://www.instagram.com/code_basa/"
+                    target="_blank"
+                  >
+                    <i class="fab fa-instagram"></i>
                   </a>
-                  <a href="#" target="_blank">
+                  <a href="https://github.com/Thomas-Basadonne" target="_blank">
                     <i class="fab fa-github"></i>
                   </a>
                   <a href="#" target="_blank">
