fix general responsive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Ehi, sono <span>Thomas Basadonne.</span><br />
             Un Web Developer.
           </h1>
-          <p>
+          <p class="h-text">
             Sono un junior full-stack developer con competenze in HTML, CSS,
             JavaScript, Vue, PHP, MySQL, Laravel, Java e Spring. Ho appena
             terminato un corso intensivo di programmazione e ho conoscenze anche
