--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
           <div class="left-about">
             <h4>Informazioni su di me</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-              labore nihil obcaecati consequatur. Debitis error doloremque, vero
-              eos vel nemo eius voluptatem dicta tenetur modi. <br />
+              Sono un giovane sviluppatore full-stack pieno di entusiasmo! Ho
+              appena completato con successo un corso intensivo, grazie al quale
+              ho acquisito competenze fondamentali nella programmazione web. Non
+              vedo l'ora di affrontare nuove sfide e continuare a imparare, al
+              fine di migliorare le mie abilità professionali. <br />
               <br />
-              La musica delectus dolore fugiat exercitationem a, ipsum quidem
-              quo enim natus accusamus labore dolores nam. Unde. Lorem ipsum
-              dolor sit amet consectetur, adipisicing elit. Harum non
-              necessitatibus deleniti eum soluta.
+              Inoltre sono un cinefilo incallito che si perde in trame
+              avvincenti e un appassionato giocatore pronto a superare ogni
+              sfida virtuale. Tuttavia, niente può sostituire l'emozione di
+              esplorare il mondo reale e culture a me nuove attraverso viaggi
+              emozionanti.
             </p>
             <div class="btn-con">
               <a
@@ -114,6 +117,65 @@
             </div>
           </div>
         </div>
+
+        <h4 class="stat-title">My Timeline</h4>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="tl-duration">2023</p>
+            <h5>Java Trainee<span> - Experis Academy</span></h5>
+            <p>
+              Ho seguito un corso intensivo di programmazione Java con una
+              durata di sei settimane, concentrandomi sull'uso del framework
+              Spring per lo sviluppo di applicazioni e acquisendo competenze
+              pratiche nella gestione di database.
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="tl-duration">2022 - 2023</p>
+            <h5>Full Stack Trainee<span> - Boolean</span></h5>
+            <p>
+              Ho trascorso oltre 700 ore apprendendo il codice, con lezioni
+              teoriche al mattino e esercizi pratici al pomeriggio fin dal primo
+              giorno. Questi esercizi hanno simulato la creazione di numerosi
+              siti e app web famosi, e alla fine del corso ho collaborato in un
+              progetto di team durato un mese.
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="tl-duration">2020 - 2022</p>
+            <h5>E-commerce Management<span> - Start2impact</span></h5>
+            <p>
+              Start2impact University è una piattaforma che tramite un unico
+              sito web fornisce formazione teorica e pratica grazie alla quale
+              ho acquisito competenze in E-commerce Management.
+            </p>
+          </div>
+          <div class="timeline-item">
+            <div class="tl-icon">
+              <i class="fas fa-briefcase"></i>
+            </div>
+            <p class="tl-duration">2020 - 2023</p>
+            <h5>Barman<span> - La Banchina</span></h5>
+            <p>
+              Nel mio ruolo precedente come cameriere e barman, ho acquisito
+              forti competenze nell'interazione con i clienti, nella
+              comunicazione efficace, nella gestione dello stress e nel lavoro
+              di squadra in un ambiente dinamico. Questa esperienza ha
+              contribuito a migliorare le mie soft skill, tra cui pazienza,
+              gentilezza e risoluzione rapida dei problemi.
+            </p>
+          </div>
+        </div>
+
         <div class="about-stats">
           <h4 class="stat-title">My Skills</h4>
           <div class="progress-bars">
@@ -209,76 +271,8 @@
             </div>
           </div>
         </div>
-        <h4 class="stat-title">My Timeline</h4>
-        <div class="timeline">
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2010 - present</p>
-            <h5>Web Developer<span> - Vircrosoft</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2008 - 2011</p>
-            <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2016 - 2017</p>
-            <h5>C++ Programmer<span> - Slime Tech</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2009 - 2013</p>
-            <h5>Business Degree<span> - Sussex University</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2013 - 2016</p>
-            <h5>Computer Science Degree<span> - Brookes University</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2017 - present</p>
-            <h5>3d Animation<span> - Brighton University</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-        </div>
       </section>
+
       <!-- <section class="container" id="portfolio">
         <div class="main-title">
         </div>
@@ -346,6 +340,7 @@
           </div>
         </div>
       </section> -->
+
       <section class="container" id="blogs">
         <div class="blogs-content">
           <div class="main-title">
