--- a/index.html
+++ b/index.html
@@ -528,14 +528,11 @@
                   <a href="https://github.com/Thomas-Basadonne" target="_blank">
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="#" target="_blank">
-                    <i class="fab fa-youtube"></i>
-                  </a>
                 </div>
               </div>
             </div>
             <div class="right-contact">
-              <form action="" class="contact-form">
+              <form action="" class="contact-form" netlify>
                 <div class="input-control i-c-2">
                   <input type="text" required placeholder="Il tuo nome" />
                   <input type="email" required placeholder="La tua E-mail" />
