--- a/index.html
+++ b/index.html
@@ -354,118 +354,196 @@
           </p>
           <div class="blogs">
             <div class="blog">
-              <img src="img/blog1.jpg" alt="" />
+              <img src="img/projects/deliveboo.png" alt="" />
               <div class="blog-text">
-                <h4>How to Become an Expert in Web Design</h4>
+                <h4>DeliveBoo</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon">
+                  <a
+                    href="https://github.com/Thomas-Basadonne?tab=repositories&q=deliveboo&type=&language=&sort="
+                    class="icon"
+                    target="_blank"
+                  >
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-behance"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-youtube"></i>
                   </a>
                 </div>
               </div>
             </div>
             <div class="blog">
-              <img src="img/blog2.jpg" alt="" />
+              <img src="img/projects/midterm.png" alt="" />
               <div class="blog-text">
-                <h4>Become a Web Designer in 10 Days</h4>
+                <h4>GoBike</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-behance"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-youtube"></i>
                   </a>
                 </div>
               </div>
             </div>
             <div class="blog">
-              <img src="img/blog2.jpg" alt="" />
+              <img src="img/projects/discord.png" alt="" />
               <div class="blog-text">
-                <h4>Become a Web Designer in 10 Days</h4>
+                <h4>Discord</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-behance"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-youtube"></i>
                   </a>
                 </div>
               </div>
             </div>
             <div class="blog">
-              <img src="img/blog3.jpg" alt="" />
+              <img src="img/projects/spotify.png" alt="" />
               <div class="blog-text">
-                <h4>Debbuging made easy with Web Inspector</h4>
+                <h4>Spotify</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-behance"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-youtube"></i>
                   </a>
                 </div>
               </div>
             </div>
             <div class="blog">
-              <img src="img/port1.jpg" alt="" />
+              <img src="img/projects/playstation.png" alt="" />
               <div class="blog-text">
-                <h4>Get started with Web Design and UI Design</h4>
+                <h4>Playstation</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-github"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-behance"></i>
                   </a>
-                  <a href="#" class="icon">
+                  <a href="#" class="icon" target="_blank">
                     <i class="fab fa-youtube"></i>
                   </a>
                 </div>
               </div>
             </div>
             <div class="blog">
-              <img src="img/port3.jpg" alt="" />
+              <img src="img/projects/quiz.png" alt="" />
               <div class="blog-text">
-                <h4>This is what you need to know about Web Design</h4>
+                <h4>CodeQuiz</h4>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
+                <div class="icons">
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="img/projects/whatsapp.png" alt="" />
+              <div class="blog-text">
+                <h4>Whatsapp</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+                <div class="icons">
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="img/projects/comics.png" alt="" />
+              <div class="blog-text">
+                <h4>Comics</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+                <div class="icons">
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="img/projects/photoalbum.png" alt="" />
+              <div class="blog-text">
+                <h4>Photoalbum</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+                <div class="icons">
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                  <a href="#" class="icon" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
